Fix close icon positioning on IE

--- a/sass/OI.modal.scss
+++ b/sass/OI.modal.scss
@@ -143,7 +143,7 @@ body.no-scroll {
   }
   
   button.close {
-    position: fixed;
+    position: absolute;
     top: 0;
     right: 0;
     width: 40px;
@@ -153,6 +153,10 @@ body.no-scroll {
     line-height: 40px;
     color: $brand-gray;
     z-index: 1;
+    
+    &.fixed {
+      position: fixed;
+    }
     
     &:hover {
       color: $text-color;
